--- a/vtrende/src/components/Client/Auth/AuthModalInfo/SignIn/ui/SignIn.module.scss
+++ b/vtrende/src/components/Client/Auth/AuthModalInfo/SignIn/ui/SignIn.module.scss
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: column  ;
   gap: 15px;
+
+
+  .forgotPassword { 
+    align-self: flex-end;
+    font-size: 15px;
+    color: var(--light-gray);
+  }
 }
