--- a/vtrende/src/entities/Client/Header/ui/Header.module.scss
+++ b/vtrende/src/entities/Client/Header/ui/Header.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: $black;
+  background-color: var(--black);
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   padding: 25px 75px;
