--- a/vtrende/src/app/styles/globals.scss
+++ b/vtrende/src/app/styles/globals.scss
@@ -35,6 +35,7 @@ body {
   color: var(--default-black);
   width: 100%;
   height: 100vh;
+  background-color: var(--gray);
   overflow-x: hidden;
   font-family: var(--font-inter), sans-serif;
   font-size: 16px;
@@ -113,10 +114,6 @@ img {
   pointer-events: none;
   user-select: none;
 }
-
-// * {
-//   user-select: none;
-// }
 
 ::-webkit-scrollbar {
   width: 12px;
