--- a/vtrende/src/shared/ui/Loader/Loader.module.scss
+++ b/vtrende/src/shared/ui/Loader/Loader.module.scss
@@ -1,19 +1,27 @@
-.loaderContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+// .loaderContainer {
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 
-.spinner {
-  width: 50px;
-  height: 50px;
-  border: 5px solid rgba(37, 35, 35, 0.4);
-  border-top: 5px solid #007bff;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
-}
+// .spinner {
+//   width: 50px;
+//   height: 50px;
+//   border: 5px solid rgba(37, 35, 35, 0.4);
+//   border-top: 5px solid #007bff;
+//   border-radius: 50%;
+//   animation: spin 1s linear infinite;
+// }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+// @keyframes spin {
+//   0% { transform: rotate(0deg); }
+//   100% { transform: rotate(360deg); }
+// }
+
+.loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: var(--blue);
+  color: var(--white);
 }
