--- a/vtrende/src/entities/Client/CategoryBlock/ui/CategoryBlock.module.scss
+++ b/vtrende/src/entities/Client/CategoryBlock/ui/CategoryBlock.module.scss
@@ -7,24 +7,56 @@
   border-radius: 40px;
   margin-top: 25px;
   height: 380px;
+  position: relative;
 
-  .text { 
+  .categoryBlockInner {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    color: var(--white);
-    width: 300px;
+    gap: 50px;
 
-    .title {
-      font-size: 36px;
-      font-weight: 600;
-    }
+    .text {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      color: var(--white);
+      width: 300px;
 
-    .description { 
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 120%;
+      .title {
+        font-size: 36px;
+        font-weight: 600;
+      }
+
+      .description {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 120%;
+      }
     }
   }
 
+  .shoppingCartIconStyles {
+    position: absolute;
+    top: -25px;
+    left: 57%;
+  }
+  
+}
+
+.containerClassname {
+  display: flex;
+  align-items: center;
+  background-color: var(--white);
+  border-radius: 15px;
+  padding: 8px 17px;
+  width: 600px;
+
+  .secondElementStyles {
+    width: 90px;
+    padding: 12px 20px;
+    margin-left: auto;
+  }
+
+  .inputClassname {
+    width: 100%;
+  }
 }
