--- a/vtrende/src/components/Client/MainPage/Footer/ui/Footer.module.scss
+++ b/vtrende/src/components/Client/MainPage/Footer/ui/Footer.module.scss
@@ -4,8 +4,8 @@
   padding: 35px 70px;
   height: 130px;
   background-color: var(--white);
-  position: sticky;
-  bottom: 0;
+  // position: sticky;
+  // bottom: 0;
   width: 100%;
   z-index: 1;
 
