--- a/vtrende/src/app/layout/Layout/ui/Layout.module.scss
+++ b/vtrende/src/app/layout/Layout/ui/Layout.module.scss
@@ -1,6 +1,22 @@
+@import "@vars";
+
+.layout { 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
 .layoutChildrenStyles { 
   display: flex;
   justify-content: center;
   max-width: 1125px;
+  width: 1125px;
   margin: 0 auto;
+  height: 100%;
+}
+
+.moreInfoProduct { 
+  width: 1250px;
+  max-width: 1250px;
 }
