--- a/vtrende/src/app/styles/vars.module.scss
+++ b/vtrende/src/app/styles/vars.module.scss
@@ -4,7 +4,7 @@ $dark-gray: #404040;
 $light-gray: #575757;
 $gray: #dfe9f2;
 $white: #fff;
-$green: #34C759CC;
+$green: #34c759cc;
 
 $default-transition: 0.3s all;
 $default-opacity: 0.7;
@@ -25,4 +25,16 @@ $default-opacity: 0.7;
   color: $black;
   font-weight: 500;
   font-size: 24px;
+}
+
+@mixin defaultMarginTop {
+  margin-top: 25px;
+}
+
+@mixin line-clamp($lines: 2) {
+  display: -webkit-box;
+  -webkit-line-clamp: $lines;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
