--- a/vtrende/src/shared/ui/Loader/Loader.module.scss
+++ b/vtrende/src/shared/ui/Loader/Loader.module.scss
@@ -1,27 +1,35 @@
-// .loaderContainer {
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
+.loaderContainer {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--white);
+  width: 100%;
+  height: 100%;
+  background-color: var(--white);
+  z-index: 1000;
+  top: 0;
+}
 
-// .spinner {
-//   width: 50px;
-//   height: 50px;
-//   border: 5px solid rgba(37, 35, 35, 0.4);
-//   border-top: 5px solid #007bff;
-//   border-radius: 50%;
-//   animation: spin 1s linear infinite;
-// }
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #DFE9F2;
+  border-top: 5px solid #0047AB;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
 
-// @keyframes spin {
-//   0% { transform: rotate(0deg); }
-//   100% { transform: rotate(360deg); }
-// }
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 .loader {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: var(--blue);
+  background-color: var(--white);
   color: var(--white);
+  z-index: 1000;
 }
