--- a/vtrende/src/components/Client/ProductPage/ShopInfo/ui/ShopInfo.module.scss
+++ b/vtrende/src/components/Client/ProductPage/ShopInfo/ui/ShopInfo.module.scss
@@ -10,7 +10,6 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    cursor: pointer;
 
     .mainInfo {
       display: flex;
@@ -53,4 +52,8 @@
 
 .ratingStyles {
   font-size: 14px !important;
+}
+
+.avatarStyles { 
+  border-radius: 50%;
 }
