--- a/vtrende/src/components/Client/ShopPage/AdditionalShopInformation/ui/AdditionalShopInformation.module.scss
+++ b/vtrende/src/components/Client/ShopPage/AdditionalShopInformation/ui/AdditionalShopInformation.module.scss
@@ -17,6 +17,7 @@
       overflow: auto;
       scrollbar-width: none;
       line-height: 1.2;
+      color: var(--light-gray);
     }
 
     .addressInfo {
@@ -52,9 +53,43 @@
   }
 
   .schedule {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    align-items: center;
+    gap: 10px;
     background-color: var(--blue);
     min-width: 170px;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
+
+    .title {
+      font-size: 16px;
+      font-weight: 600;
+      color: var(--white);
+    }
+
+    .chart {
+      display: flex;
+      flex-direction: column;
+      gap: 3px;
+
+      .date {
+        font-size: 12px;
+        font-weight: 400;
+        color: #dfe9f2;
+      }
+
+      .activeDate {
+        font-size: 14px;
+        font-weight: 900;
+        color: var(--white);
+      }
+
+      .closed {
+        display: none;
+      }
+    }
   }
 }
