--- a/vtrende/src/shared/ui/Select/Select.module.scss
+++ b/vtrende/src/shared/ui/Select/Select.module.scss
@@ -1,54 +1,22 @@
+@import '@vars';
+
 .select {
-  position: relative;
-  width: 200px;
-  font-family: "Roboto", sans-serif;
-  color: white;
+  background-color: #fff;
+  border-radius: 8px;
+  max-height: 200px;
+  overflow-y: auto;
+  width: 100%;
+  scrollbar-width: none;
 }
 
-.selectHeader {
-  display: flex;
-  align-items: center;
-  background-color: #1a1a1a;
-  padding: 10px;
-  border-radius: 5px;
+.option {
+  padding: 12px;
   cursor: pointer;
-}
+  font-size: 14px;
+  color: var(--black);
+  transition: $default-transition;
 
-.icon {
-  margin-right: 10px;
-  font-size: 20px;
-}
-
-.selected {
-  flex-grow: 1;
-  font-size: 16px;
-}
-
-.arrow {
-  font-size: 12px;
-  color: #1e90ff;
-}
-
-.selectList {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  right: 0;
-  background-color: #1a1a1a;
-  border-radius: 5px;
-  margin-top: 5px;
-  padding: 0;
-  list-style: none;
-  z-index: 10;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
-
-.selectItem {
-  padding: 10px;
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.selectItem:hover {
-  background-color: #333;
+  &:hover {
+    background-color: #e3e9eea3 !important;
+  }
 }
